# disposition

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  renovate.json
.github/workflows/: build-publish.yml  bump-version.yml  create-release.yml  integration.yml  run-checks.yml  run-tests.yml
docs/source/: api.rst  conf.py  examples.md  glossary.md  index.md  layouts.md  license.md  overview.md
docs/source/_ext/: autoenum.py
docs/source/_static/: custom.css
src/disposition/: __init__.py  core.py
src/disposition/elements/: core.py
templates-poc/: main.py  notes.md  sidebar.xml  styles.css  template.xml
tests/: test_placeholder.py
