
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry]
name = "disposition"
version = "0.0.0"
description = "Framework for generating reports and plots with flexible and precise layouts"
authors = ["Kenneth Trelborg Vestergaard <mortencombat@fastmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://disposition.readthedocs.io"
repository = "https://github.com/mortencombat/disposition"
documentation = "https://disposition.readthedocs.io"
keywords = ["reports", "layout", "plots"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
]
packages = [
    { include = "disposition", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.9"
stretchable = { version = "^1.0.0b3", allow-prereleases = true }

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
flake8 = "^6.0.0"
pytest = "^7.4"
pytest-cache = "*"
pytest-cov = "*"
pytest-html = "*"
hypothesis = "*"
pre-commit = "^3.5.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2"
myst-parser = "^2.0"
furo = "^2023.9.10"
sphinx-copybutton = "*"
readthedocs-sphinx-search = "*"
sphinx-autodoc-typehints = "^1.25"

[tool.poetry-dynamic-versioning]
enable = true

[tool.black]
line_length = 120
